refactor: polish code quality, fix exceptions, leaks and test configuration
- Fix generic exceptions and resource leaks
- Clean up redundant assertions and mocks in Outbox and Statistic tests
- Disable background Outbox scheduler in integration tests to prevent Kafka timeouts